[gd_scene load_steps=6 format=3 uid="uid://lea3l0ewp5fr"]

[ext_resource type="PackedScene" uid="uid://y8ha8abfyap2" path="res://scenes/game_elements/props/filling_barrel/filling_barrel.tscn" id="1_ab25j"]
[ext_resource type="SpriteFrames" uid="uid://ch0p31t4upx7w" path="res://scenes/quests/lore_quests/quest_003/2_ink_drinker_levels/components/barrel_cracks/barrel_cracks.tres" id="2_g6wko"]
[ext_resource type="Script" uid="uid://d05hp7ascndlr" path="res://scenes/quests/lore_quests/quest_003/2_ink_drinker_levels/components/fragile_barrel.gd" id="2_wal8y"]
[ext_resource type="AudioStream" uid="uid://bknpb07lvbded" path="res://scenes/quests/lore_quests/quest_003/2_ink_drinker_levels/components/sounds/sfx_barrel_crack.tres" id="4_sdj6j"]
[ext_resource type="AudioStream" uid="uid://c3iuv5ax8i78v" path="res://scenes/quests/lore_quests/quest_003/2_ink_drinker_levels/components/sounds/stx_fragile_barrel.tres" id="5_v7k7g"]

[node name="FragileBarrel" instance=ExtResource("1_ab25j")]
script = ExtResource("2_wal8y")
max_health = 4

[node name="CrackOverlay" type="AnimatedSprite2D" parent="." index="1"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -21)
sprite_frames = ExtResource("2_g6wko")

[node name="CrackSound" type="AudioStreamPlayer2D" parent="." index="6"]
unique_name_in_owner = true
stream = ExtResource("4_sdj6j")

[node name="ShatterSound" type="AudioStreamPlayer2D" parent="." index="7"]
unique_name_in_owner = true
stream = ExtResource("5_v7k7g")
